--- a/package.json
+++ b/package.json
@@ -5,32 +5,24 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router": "^4.1.1"
+    "react-fa": "^4.1.2",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
     "flow-bin": "^0.44.0",
     "husky": "^0.13.3",
     "lint-staged": "^3.4.0",
-    "react-scripts": "0.9.5",
-    "stylelint": "^7.10.1",
-    "stylelint-config-standard": "^16.0.0"
+    "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "release": "yarn build && ./scripts/deploy.sh",
     "flow": "flow",
-    "precommit": "yarn lint-staged",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "precommit": "yarn flow && yarn lint-staged"
   },
-  "lint-staged": {
-    "src/**/*.js": "eslint",
-    "src/**/*.css": "stylelint"
-  }
+  "lint-staged": {}
 }
