--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-fa": "^4.1.2",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "styled-components": "^1.4.5"
   },
   "devDependencies": {
     "flow-bin": "^0.44.0",
