--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "flow-typed": "^2.1.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-fa": "^4.1.2",
+    "react-fa": "^4.2.0",
     "react-router-dom": "^4.1.1",
-    "styled-components": "^1.4.5"
+    "styled-components": "^2.0.1"
   },
   "devDependencies": {
-    "flow-bin": "^0.44.2",
-    "husky": "^0.13.3",
-    "lint-staged": "^3.4.0",
-    "react-scripts": "0.9.5"
+    "flow-bin": "^0.47.0",
+    "husky": "^0.13.4",
+    "lint-staged": "^3.6.0",
+    "react-scripts": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
