Adds data model

--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "hoist-non-react-statics": "^2.2.1",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-fa": "^4.2.0",
+    "react-router-config": "^1.0.0-beta.3",
     "react-router-dom": "^4.1.2",
     "styled-components": "^2.1.2"
   },
