--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "hedron": "^0.7.1",
     "hoist-non-react-statics": "^2.2.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
